--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "eslint": "^6.8.0",
         "ts-loader": "^6.2.2",
         "typescript": "^3.9.5",
-        "vue-loader": "^15.9.3",
+        "vue-loader": "^16.0.0-beta.4",
         "vite": "^1.0.0-beta.8",
         "@vue/compiler-sfc": "^3.0.0-beta.16"
     },
